--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@
 /* this is section 1 */
 .bonus-containerbar h1 {
   font-size: 48px;
+  font-weight: 800;
   text-align: center;
   color: #272727;
   margin-top: 40px;
@@ -52,6 +53,7 @@
 }
 .bonus-containerbar p {
   font-size: 18px;
+  font-weight: 400;
   text-align: center;
   color: rgba(39, 39, 39, 0.6);
   margin-bottom: 45px;
@@ -146,58 +148,107 @@ li {
   background: rgba(229, 84, 115, 0.05);
   gap: 45px;
 }
-.container-section3 h1{
-    color: #272727;
-    font-weight: 800;
-    font-size: 40px;
-    margin-bottom: 15px;
+.container-section3 h1 {
+  color: #272727;
+  font-weight: 800;
+  font-size: 40px;
+  margin-bottom: 15px;
 }
-.container-section3 h1 span{
-    color: #e55473;
+.container-section3 h1 span {
+  color: #e55473;
 }
-.container-section3 p{
-    color: rgba(39, 39, 39, 0.60);
-    font-size: 18px;
-    font-weight: 400;
-    margin-bottom: 20px;
+.container-section3 p {
+  color: rgba(39, 39, 39, 0.6);
+  font-size: 18px;
+  font-weight: 400;
+  margin-bottom: 20px;
 }
-.container-section3 button{
-    font-size: 20px;
-    font-weight: 700;
-    padding: 20px 43px;
-    border-radius: 8px;
-    background: #e55473;
-    color: white;
-    border: 0px;
+.container-section3 button {
+  font-size: 20px;
+  font-weight: 700;
+  padding: 20px 43px;
+  border-radius: 8px;
+  background: #e55473;
+  color: white;
+  border: 0px;
 }
 #img {
   padding-top: 50px;
   padding-bottom: 50px;
 }
 /* container section 4 */
-.container-section4-title{
+.container-section4-title {
   margin-top: 100px;
   text-align: center;
 }
-.container-section4-title h1{
+.container-section4-title h1 {
   font-size: 40px;
   font-weight: 800;
   color: #272727;
 }
-.container-section4-title p{
+.container-section4-title p {
   font-size: 18px;
   font-weight: 400;
-  color: rgba(39, 39, 39, 0.60);
-  margin-top:10px ;
-  margin-bottom:35px ;
+  color: rgba(39, 39, 39, 0.6);
+  margin-top: 10px;
+  margin-bottom: 35px;
 }
-.container-section4{
+.container-section4 {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 28px;
 }
-.item{
+.item {
   width: 273px;
   height: 273px;
+}
+/* container section 5 */
+.container-section5 {
+  height: 450px;
+  background-image: url("images/Rectangle\ 9.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 8px;
+  margin: 80px 85px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.container-section5 h1 {
+  font-size: 40px;
+  font-weight: 800;
+  color: rgba(39, 39, 39, 1);
+  margin-bottom: 10px;
+}
+.container-section5 p {
+  font-size: 18px;
+  font-weight: 400;
+  color: rgba(39, 39, 39, 0.6);
+}
+.container-section5 input {
+  width: 700px;
+  height: 30px;
+  font-size: 16px;
+  font-weight: 400;
+  padding: 20px;
+  margin-top: 15px;
+  border: 0px;
+  border-radius: 8px;
+  color: white;
+  margin-right: 10px;
+}
+.container-section5 button {
+  font-size: 20px;
+  font-weight: 700;
+  width: 150px;
+  height: 67px;
+  text-align: center;
+  padding: 20px 35px;
+  border: 0px;
+  border-radius: 8px;
+  background: #e55473;
+  color: white;
 }
