--- a/style.css
+++ b/style.css
@@ -194,6 +194,7 @@ li {
   margin-bottom: 35px;
 }
 .container-section4 {
+  margin: 80px 85px;
   display: flex;
   justify-content: center;
   align-items: center;
